<resources>
    <string name="app_name">Tasty</string>
    <string name="logo_name">Tasty</string>
    <string name="slogan_name">Get Tasty..Set Easily..</string>
    <string name="powerd_by" translatable="false">Powered By Eazy.Beazy</string>

    //categories
    <string name="orders">Orders</string>
    <string name="meals">Meals</string>
    <string name="favourite">Favourite</string>
    <string name="received">Received</string>
    <string name="salads">Salads</string>


    //titles and descriptions

    <string name="featured">All featured meals</string>
    <string name="featured_des">All the meals that are featured and have best tast !</string>
    <string name="most_take">Most bought</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_all">Search...</string>
    <string name="splash_screen_image">splash screen image</string>

    //recyclerview1
    <string name="r1">Cooked food</string>
    <string name="r2">Tasted</string>
    <string name="r3">Char Grilled</string>
    <string name="r4">Cruncy</string>
    //des
    <string name="des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, labore et dolore magna aliqua</string>


    //login
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="retail">We will provide you tasty food..</string>
    <string name="retail_menu">Buy tasty food from here..</string>
    <string name="create">Create Account</string>
    <string name="how">How we provided ?</string>
    <string name="remember">Remember me</string>
    <string name="forget">Forget password</string>
    <string name="username">Username</string>
    <string name="password">Enter Password</string>
    <string name="entr_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>

    //signin
    <string name="email">Enter E-mail</string>
    <string name="name">Enter full name</string>
    <string name="confirm">Confirm password</string>
    <string name="next">Next</string>
    <string name="already">Already have an account ?</string>
    <string name="profile">Profle Details</string>
    <string name="dob">Enter Birthday</string>
    <string name="contact">Enter Contact Number</string>
    <string name="gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    //otp
    <string name="otp">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="ver_des">Enter one time password sent to your contact number</string>
</resources>