<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignUp.Startup"
    android:background="@color/home_background"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/ic_ui"
            android:contentDescription="TODO"
            android:background="@color/home_background"/>

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/retail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAllCaps="true"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/retail_menu"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30dp">

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:onClick="callLoginScreen"
        android:background="@color/colorPrimary"
        android:text="@string/login" />
    <Button
        android:id="@+id/sign_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimary"
        android:onClick="callSignUpScreen"

        />


</LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>