<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginSignUp.Signup"
    android:background="@color/colorPrimary"
    android:padding="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/sign_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="callback"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/abril_fatface"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entr_username"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/colorAccent"



        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="@font/alatsi"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/colorAccent"



        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="@font/alatsi"

            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
        app:startIconTint="@color/colorAccent"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="@font/alatsi"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorAccent"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="@font/alatsi"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        android:textColorHint="@color/colorAccent"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorAccent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/colorAccent"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_repass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:fontFamily="@font/alatsi"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/regi_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:onClick="save"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:onClick="returnlogin"/>

</LinearLayout>


</LinearLayout>
</ScrollView>