<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".common.LoginSignUp.Login_Activity"
android:background="@color/colorPrimary"
android:padding="30dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:onClick="callback"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/colorAccent"



            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ename"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="@font/alatsi"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/colorAccent"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/epass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:fontFamily="@font/alatsi"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:text="@string/remember"
                android:buttonTint="@color/black"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget"
                android:background="#00000000"
                android:textColor="@color/colorAccent"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
           />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:onClick="returnsignup"/>

    </LinearLayout>
</LinearLayout>

</ScrollView>